trunk/Archive2/f8/261ee71c4b6cef/output
main.cpp: In function 'char* foo(char**)':
main.cpp:7:1: warning: no return statement in function returning non-void [-Wreturn-type]
 }
 ^
main.cpp: In function 'int main()':
main.cpp:12:23: error: cannot convert 'char (*)[20]' to 'char**' for argument '1' to 'char* foo(char**)'
     char* x = foo(&abc);    
                       ^
main.cpp:12:11: warning: unused variable 'x' [-Wunused-variable]
     char* x = foo(&abc);    
           ^
